--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "animejs": "^3.2.1",
     "axios": "^0.21.0",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^1.13.0",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.3",
+    "react-animejs": "^0.5.4",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.2",
     "react-leaflet-enhanced-marker": "^1.0.19",
