--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^1.13.0",
+    "material-ui": "^0.20.2",
+    "prosthetic-hand": "^1.3.1",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.3",
     "react-animejs": "^0.5.4",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.2",
     "react-leaflet-enhanced-marker": "^1.0.19",
+    "react-map-interaction": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tap-event-plugin": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
