--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^1.13.0",
     "material-ui": "^0.20.2",
